<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:columnCount="5">

        <Button
            android:id="@+id/button_7"
            android:layout_row="1"
            android:layout_column="0"
            android:backgroundTint="#fff"
            android:text="@string/number_7"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_8"
            android:layout_row="1"
            android:layout_column="1"
            android:backgroundTint="#fff"
            android:text="@string/number_8"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_9"
            android:layout_row="1"
            android:layout_column="2"
            android:backgroundTint="#fff"
            android:text="@string/number_9"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_row="1"
            android:layout_column="3"
            android:backgroundTint="#fff"
            android:text="@string/divide"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_row="1"
            android:layout_column="4"
            android:backgroundTint="#fff"
            android:text="@string/delete"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_4"
            android:layout_row="2"
            android:layout_column="0"
            android:backgroundTint="#fff"
            android:text="@string/number_4"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_5"
            android:layout_row="2"
            android:layout_column="1"
            android:backgroundTint="#fff"
            android:text="@string/number_5"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_6"
            android:layout_row="2"
            android:layout_column="2"
            android:backgroundTint="#fff"
            android:text="@string/number_6"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_row="2"
            android:layout_column="3"
            android:backgroundTint="#fff"
            android:text="@string/multiply"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_1"
            android:layout_row="3"
            android:layout_column="0"
            android:backgroundTint="#fff"
            android:text="@string/number_1"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_2"
            android:layout_row="3"
            android:layout_column="1"
            android:backgroundTint="#fff"
            android:text="@string/number_2"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_3"
            android:layout_row="3"
            android:layout_column="2"
            android:backgroundTint="#fff"
            android:text="@string/number_3"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_row="3"
            android:layout_column="3"
            android:backgroundTint="#fff"
            android:text="@string/subtract"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_0"
            android:layout_row="4"
            android:layout_column="0"
            android:backgroundTint="#fff"
            android:text="@string/number_0"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_dot"
            android:layout_row="4"
            android:layout_column="1"
            android:backgroundTint="#fff"
            android:text="@string/dot"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_add"
            android:layout_row="4"
            android:layout_column="3"
            android:backgroundTint="#fff"
            android:text="@string/add"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

        <Button
            android:id="@+id/button_calculate"
            android:layout_row="4"
            android:layout_column="4"
            android:backgroundTint="#fff"
            android:text="@string/calculate"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_columnSpan="1"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>