<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/button_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="0dp">

    <Button
        android:id="@+id/button_7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:background="@drawable/button_background"
        android:text="@string/number_7"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:background="@drawable/button_background"
        android:text="@string/number_8"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_9"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_row="0"
        android:background="@drawable/button_background"
        android:text="@string/number_9"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:background="@drawable/button_background"
        android:text="@string/number_4"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:background="@drawable/button_background"
        android:text="@string/number_5"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_row="1"
        android:background="@drawable/button_background"
        android:text="@string/number_6"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="2"
        android:background="@drawable/button_background"
        android:text="@string/number_1"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="2"
        android:background="@drawable/button_background"
        android:text="@string/number_2"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_row="2"
        android:background="@drawable/button_background"
        android:text="@string/number_3"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="3"
        android:background="@drawable/button_background"
        android:text="@string/number_0"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>


    <Button
        android:id="@+id/button_dot"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="3"
        android:background="@drawable/button_background"
        android:text="@string/dot"
        android:textColor="@color/number_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>





</GridLayout>