<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/button_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="0dp">

    <Button
        android:id="@+id/button_divide"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:background="@drawable/button_background"
        android:text="@string/divide"
        android:textColor="@color/action_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:background="@drawable/button_background"
        android:text="@string/delete"
        android:textColor="@color/action_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:background="@drawable/button_background"
        android:text="@string/multiply"
        android:textColor="@color/action_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_subtract"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="2"
        android:background="@drawable/button_background"
        android:text="@string/subtract"
        android:textColor="@color/action_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"
        />

    <Button
        android:id="@+id/button_add"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_row="3"
        android:background="@drawable/button_background"
        android:text="@string/add"
        android:textColor="@color/action_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="3"
        android:background="@drawable/button_background"
        android:text="@string/calculate"
        android:textColor="@color/action_button_text_color"
        android:textStyle="bold"
        android:layout_gravity="fill"
        style="?android:attr/borderlessButtonStyle"
        android:minWidth="10dp"
        android:minHeight="10dp"/>


</GridLayout>